# 3d_obj_detection

./: 3D Bounding box regressor.ipynb  3d_to_2d.ipynb  3d_to_2d_test_methods.ipynb  CMakeLists.txt  Dataset creator.ipynb  Instance segmentation.ipynb  Instance_segmentation.ipynb  Plotting 3D boxes.ipynb  README.md  requirements.txt  test_3d_to_2d_box.py  test_json.ipynb  test_json.txt  utils.py  vis_utils.py
.ipynb_checkpoints/: Dataset creator-checkpoint.ipynb  test_json-checkpoint.ipynb
dataset/: detection_config.json
dataset/ann_points_cam/: img_pc_anno_63b89fe17f3e41ecbe28337e0e35db8e.txt  img_pc_anno_83d881a6b3d94ef3a3bc3b585cc514f8.txt
dataset/ann_points_lidar/: pc_anno_63b89fe17f3e41ecbe28337e0e35db8e.txt  pc_anno_83d881a6b3d94ef3a3bc3b585cc514f8.txt
dataset/pcd_segmentation/: car1.pcd  car2.pcd  car3.pcd  car4.pcd
dataset/point_features/: car1cvfh_.txt  car1esf_.txt  car1ourcvfh_.txt  car1vfh_.txt  car2cvfh_.txt  car2esf_.txt  car2ourcvfh_.txt  car2vfh_.txt  car3cvfh_.txt  car3esf_.txt  car3ourcvfh_.txt  car3vfh_.txt  car4cvfh_.txt  car4esf_.txt  car4ourcvfh_.txt  car4vfh_.txt
dataset/samples/: sample_ca9a282c9e77460f8360f564131a8af5_file.txt
src/: pcl_features.cpp  vfh.cpp
tutorials/: 3d_to_2d_test_methods.ipynb
utils/: eval.py  misc.py  vis.py
vfh_features/: car_vfh.txt
